<resources>
    <string name="app_name">GMaps</string>
    <string name="title_activity_maps">Map</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="go">Go</string>
    <string name="zoom">Zoom</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="satellite">Satellite</string>
    <string name="none">None</string>
    <string name="search">Search</string>
    <string name="place">Places</string>
</resources>
